--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "axios": "^0.19.2",
     "cookieparser": "^0.1.0",
     "dayjs": "^1.8.28",
+    "fs": "0.0.1-security",
     "js-cookie": "^2.2.1",
     "markdown-it": "^11.0.0",
-    "nuxt": "^2.12.2"
+    "nuxt": "^2.12.2",
+    "path": "^0.12.7"
   }
 }
